[gd_scene load_steps=7 format=3 uid="uid://bj5kkdu1ih7du"]

[ext_resource type="Script" path="res://Scripts/Level Mechanics/Threats/StaticThreats/AreaAttack.gd" id="1_va8th"]
[ext_resource type="Texture2D" uid="uid://dkb6jfipr86li" path="res://Sprites/Temp/Threats/Temp AOE Threat Sheet.png" id="2_dindy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4rbj8"]
radius = 50.0

[sub_resource type="Animation" id="Animation_4s06m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dindy")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_up271"]
resource_name = "Warning"
length = 2.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.025, 2.1, 2.175, 2.25, 2.301, 2.36, 2.419, 2.478, 2.5, 2.525, 2.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dindy")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m4ixs"]
_data = {
"RESET": SubResource("Animation_4s06m"),
"Warning": SubResource("Animation_up271")
}

[node name="AreaAttack" type="Node2D"]
script = ExtResource("1_va8th")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dindy")
hframes = 24

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4rbj8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_m4ixs")
}

[connection signal="area_entered" from="Area2D" to="." method="OnEntered"]
[connection signal="area_exited" from="Area2D" to="." method="OnExit"]
[connection signal="body_entered" from="Area2D" to="." method="OnEntered"]
[connection signal="body_exited" from="Area2D" to="." method="OnExit"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
